# ad-automoli

./: .bumpversion.cfg  CHANGELOG.md  LICENSE  README.md  __init__.py  hacs.json  info.md  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: black.yml  black.yml_disabled  changelog.yml  codeql-analysis.yml  docker.yml  format.yml  hacs.yml  publish-to-test-pypi.yml
adutils/: __init__.py
apps/automoli/: automoli.py  pip.py  pkg_helper.py  requirements.txt
apps/automoli/adutils/: README.md
demo/: Dockerfile  automoli.appdaemon.yaml  automoli.apps.yaml
