[project]
name = "adutils"
version = "0.4.6"
description = "Helper and utilities for AppDaemon apps."
authors = [
    "Ben Lebherz <git@benleb.de>"
]
license = "MIT"
readme = "README.md"
python = "^3.7"
homepage = "https://github.com/benleb/adutils"
repository = "https://github.com/benleb/adutils"
documentation = "https://github.com/benleb/adutils"

keywords = ["appdaemon", "app"]

classifiers = [
    "Topic :: Software Development",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Requirements
[dependencies]

[dev-dependencies]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool.black]
line-length = 88
target_version = ["py37"]
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
